samples/_failures_safe/1761303124_d36608_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce621544.c: In function ‘main’:
./samples/SAFE/__tmp_ce621544.c:147:24: error: missing terminating " character
  147 |                 printf("Stack full, cannot
      |                        ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ce621544.c:147:17: error: expected expression at end of input
  147 |                 printf("Stack full, cannot
      |                 ^~~~~~
./samples/SAFE/__tmp_ce621544.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce621544.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce621544.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce621544.c:147:17: error: expected declaration or statement at end of input
